font size and color contrast fixes

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -80,7 +80,7 @@
 		cursor:pointer;
 	}
 	@include mobile {
-		font-size:1.1em;
+		font-size:1.14em;
 	}
 }
 
