--- a/sass/main.scss
+++ b/sass/main.scss
@@ -667,7 +667,7 @@ footer.footer {
 			@include mobile {
 				clear:both;
 				width:100%;
-				font-size:0.9em;
+				font-size:1.05em;
 			}
 		}
 	}
